# python-template-for-claude-code

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  claude_code_collaboration.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml
docs/: backend-project-guide.md  claude-collaboration-guide.md  ml-project-guide.md
scripts/: setup.sh  update_project_name.py
src/project_name/: __init__.py  types.py
src/project_name/core/: example.py
src/project_name/utils/: helpers.py
tests/: conftest.py
tests/property/: test_helpers_property.py
tests/unit/: test_example.py  test_helpers.py
